cmake_minimum_required(VERSION 2.8...4.0)

set(PROJECT_NAME VerUp LANGUAGES CXX)

Project(${PROJECT_NAME})

set(PROCESSOR_ARHITECTURE_TYPE "UNKNOWN")

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(PROCESSOR_ARHITECTURE_TYPE "x64")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(PROCESSOR_ARHITECTURE_TYPE "x32")
else()
    string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" LOWER_CASE_PROC)

    if(${LOWER_CASE_PROC} STREQUAL "arm" OR ${LOWER_CASE_PROC} STREQUAL "aarch64")
        set(PROCESSOR_ARHITECTURE_TYPE "ARM")
    elseif(${LOWER_CASE_PROC} STREQUAL "powerpc" OR ${LOWER_CASE_PROC} STREQUAL "ppc64le")
        set(PROCESSOR_ARHITECTURE_TYPE "PowerPC")
    elseif(${LOWER_CASE_PROC} STREQUAL "mips" OR ${LOWER_CASE_PROC} STREQUAL "mipsel")
        set(PROCESSOR_ARHITECTURE_TYPE "MIPS")
    elseif(${LOWER_CASE_PROC} STREQUAL "riscv64")
        set(PROCESSOR_ARHITECTURE_TYPE "RISC-V 64-bit")
    else()
        message(ERROR "Unrecognized processor type: ${CMAKE_SYSTEM_PROCESSOR}. Setting PROCESSOR_ARHITECTURE_TYPE to Unknown.")
    endif()
endif()

message(STATUS "Building for arhitecture: ${PROCESSOR_ARHITECTURE_TYPE}, build type: ${CMAKE_BUILD_TYPE}")


set(HEADER_FILES  

)

set(SOURCE_FILES 
    ${CMAKE_SOURCE_DIR}/src/main.cpp
)

add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)

#target properties
set_target_properties(${PROJECT_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROCESSOR_ARHITECTURE_TYPE}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROCESSOR_ARHITECTURE_TYPE}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROCESSOR_ARHITECTURE_TYPE}/bin"
    PDB_OUTPUT_DIRECTORY     "${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROCESSOR_ARHITECTURE_TYPE}/bin"
)